--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -7,11 +7,11 @@ viewSPR.deIdentifiedReportInformation.title=De-Identified Report Information
 viewSPR.categoryHighlighter.title=Category Highlighter
 viewSPR.reportInfo.spn=Surgical Pathology Number
 viewSPR.reportInfo.reportId=Report Id
-viewSPR.deIdenfiedReport=Show De-Identified Report
+viewSPR.deIdenfiedReport=De-Identified Report
 viewSPR.button.requestForReview=Request for Review
 viewSPR.button.requestForQuarantine=Request for Quarantine
 viewSPR.identifiedReport=Identified Report
-viewSPR.compareReports=Compare Identified-Deidentified Reports
+viewSPR.compareReports=Compare Reports
 viewSPR.myRequests=My Requests
 viewSPR.label.comment=Comment
 viewSPR.view.title=View
@@ -28,6 +28,7 @@ mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
 mylist.label.orderBioSpecimen=Order BioSpecimens
 
+
 #Ordering System
 orderingsystem.label.requestOrder=Order Biospecimen
 orderingsystem.label.orderRequestName=Order Name
@@ -37,7 +38,6 @@ orderingsystem.button.submit=Next
 orderingsystem.tooltip.button.submit=Proceed To Order Details
 orderingsystem.label.specimenList=Specimen List
 orderingsystem.label.specimenName=Specimen Name
-orderingsystem.label.distributionSite=Storage Site
 orderingsystem.label.availableQuantity=Available Quantity
 orderingsystem.label.requestedQuantity=Required Quantity
 orderingsystem.label.description=Description
@@ -73,14 +73,6 @@ orderingsystem.label.requestdetailsarray=Request Details-Array
 orderingsystem.label.existingArray=Existing Array
 orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
-
-errors.ordering.note=<font size\="3.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
-errors.ordering.note1=<font size\="3.0"> they will not be available for placing an order:</font> 
-errors.ordering.a=<font size\="3.0"> a.  Is stored in the virtual location</font> 
-errors.ordering.b=<font size\="3.0"> b. Is of zero quantity</font> 
-errors.ordering.c=<font size\="3.0"> c. Is not available</font> 
-errors.ordering.d=<font size\="3.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
-
 
 orderingSystem.label.create Create
 errors.browser.not.supports.iframe=Your Browser doesn't support IFrames.
@@ -186,6 +178,9 @@ consent.consenttiers Consent Tiers\t
 consent.statements Statements
 consent.withdrawconsenttier Withdraw Consent Tier
 consent.withdrawquestion What do you want to do with the withdrawn specimen/s?
+consent.discard Discard the Specimen and all Sub Specimen(disable)
+consent.returntocollectionsite Return Specimen to Collection Site
+consent.noaction Perform no action on the Specimens
 consent.discard To Discard the Specimen and all Sub Specimen(disable)-click '<b>Discard</b>'
 consent.returntocollectionsite To Return Specimen to Collection Site -click '<b>Return</b>'
 consent.noaction To Perform no action on the Specimens -click '<b>Reset</b>'
@@ -623,6 +618,22 @@ app.welcomeNote=Welcome to {0} {1} {2}
 app.welcomeNote.login Welcome to {0} {1}. You have successfully logged-in.
 #--Main Menu Keys End--
 
+#-----Help Page-- 
+app.help=Help
+app.userguide=User Guide
+app.userguide.message=This guide is intended for end users. It includes instructions and information for using the caTissue software for day to day tissue banking operations.
+app.technicalguide=Technical Guide
+app.technicalguide.message=This guide is intended for the IT group. It describes architecture, APIs, and other tools that integrate with the software being developed and their implementation.
+app.training=Training
+app.training.message=Designed to give users information about the application with the help of presentations and self paced movies.
+app.umlmodel=UML Model
+app.umlmodel.message=Diagrammatic representation of the UML model of caTissue.
+app.gforge=GForge Forum
+app.gforge.message=This is the discussion forum for posting end user queries related to application usage, deployment  and other end user requests.
+app.knowledgecenter=Knowledge Center
+app.knowledgecenter.message=This provides a centralized, authoritative repository of knowledge, information, and web-based support to facilitate the deployment and ongoing development of caTissue.
+#-- Help Page Keys End--
+
 #--Common SubMenu Keys Begin--
 app.quickLinks=Quick Links
 app.cabigHome=caBIG Home
@@ -724,7 +735,6 @@ buttons.reset=Reset
 buttons.approve=Approve
 buttons.reject=Reject
 buttons.submit=Submit
-buttons.addPrivilege=Add Privilege
 buttons.close=Close
 buttons.pending=Pending
 buttons.edit=Edit
@@ -956,7 +966,6 @@ specimen.label=Label
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
-create.CpChildSp = Create Aliquot/Derived Specimen as per CP
 #-- New Specimen Keys End --
 
 #--Department Add/Edit keys Begin--
@@ -1097,7 +1106,7 @@ specimenCollectionGroup.studyCalendarEventPoint=Study Calendar Event Point
 specimenCollectionGroup.clinicalDiagnosis=Clinical Diagnosis
 specimenCollectionGroup.clinicalStatus=Clinical Status
 specimenCollectionGroup.medicalRecordNumber=Medical Record Number
-specimenCollectionGroup.surgicalPathologyNumber=Surgical Pathology Number
+specimenCollectionGroup.surgicalPathologyNumber=Surgical pathology number
 specimenCollectionGroup.collectionStatus=Collection Status
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
 specimen.details.label Specimen Details
@@ -1139,7 +1148,6 @@ storageType.holdsSpecimenClass=Specimen Type
 #-- StorageContainer Add/Edit Keys Begin --
 storageContainer.id=Identifier
 storageContainer.title=Add Storage Container
-storageContainer.header=Storage Container
 storageContainer.editTitle=Edit Storage Container
 storageContainer.type=Type
 storageContainer.name=Container Name
@@ -1397,7 +1405,7 @@ distribution.fromSite=From Site
 distribution.toSite=To Site
 distribution.specimenType=Specimen Type
 distribution.searchTitle=Enter The Identifier
-distribution.distributedItem=Distributed Item(s)
+distribution.distributedItem=Distributed Item(S)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
@@ -1645,7 +1653,12 @@ format.phoneNumber=
 
 #-- Summary Page --
 summary.page.welcome=caTissue Core Summary
+summary.page.caption=Total Specimens
 summary.page.description=This page shows the total count of available specimens according to their classification.
+summary.page.total.cell.count=Total Cell Specimens
+summary.page.total.tissue.count=Total Tissue Specimens
+summary.page.total.fluid.count=Total Fluid Specimens
+summary.page.total.molecular.count=Total Molecular Specimens
 summary.page.table.title=Specimen Type Count
 summary.page.table.type=Type
 summary.page.count=Count
@@ -1699,7 +1712,7 @@ specimenArrayAliquots.specimenType=Specimen Type
 specimenArrayAliquots.label=Label
 specimenArrayAliquots.barcode=Barcode
 specimenArrayAliquots.location=Location
-specimenArrayAliquots.parent=Parent Specimen Array
+
 
 specimenArrayAliquots.summaryTitle=Specimen Array Aliquot Creation Summary
 
