change again inserted into file - was over-written by someone
SVN-Revision: 14628

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1965,3 +1965,5 @@ save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not sup
 participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
+# MSR change
+buttons.addPrivilege=Add Privilege
