*** empty log message ***
SVN-Revision: 14630

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -28,7 +28,6 @@ mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
 mylist.label.orderBioSpecimen=Order BioSpecimens
 
-
 #Ordering System
 orderingsystem.label.requestOrder=Order Biospecimen
 orderingsystem.label.orderRequestName=Order Name
@@ -38,6 +37,7 @@ orderingsystem.button.submit=Next
 orderingsystem.tooltip.button.submit=Proceed To Order Details
 orderingsystem.label.specimenList=Specimen List
 orderingsystem.label.specimenName=Specimen Name
+orderingsystem.label.distributionSite=Storage Site
 orderingsystem.label.availableQuantity=Available Quantity
 orderingsystem.label.requestedQuantity=Required Quantity
 orderingsystem.label.description=Description
@@ -73,6 +73,14 @@ orderingsystem.label.requestdetailsarray=Request Details-Array
 orderingsystem.label.existingArray=Existing Array
 orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
+
+errors.ordering.note=<font size\="3.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
+errors.ordering.note1=<font size\="3.0"> they will not be available for placing an order:</font> 
+errors.ordering.a=<font size\="3.0"> a.  Is stored in the virtual location</font> 
+errors.ordering.b=<font size\="3.0"> b. Is of zero quantity</font> 
+errors.ordering.c=<font size\="3.0"> c. Is not available</font> 
+errors.ordering.d=<font size\="3.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
+
 
 orderingSystem.label.create Create
 errors.browser.not.supports.iframe=Your Browser doesn't support IFrames.
@@ -178,9 +186,6 @@ consent.consenttiers Consent Tiers\t
 consent.statements Statements
 consent.withdrawconsenttier Withdraw Consent Tier
 consent.withdrawquestion What do you want to do with the withdrawn specimen/s?
-consent.discard Discard the Specimen and all Sub Specimen(disable)
-consent.returntocollectionsite Return Specimen to Collection Site
-consent.noaction Perform no action on the Specimens
 consent.discard To Discard the Specimen and all Sub Specimen(disable)-click '<b>Discard</b>'
 consent.returntocollectionsite To Return Specimen to Collection Site -click '<b>Return</b>'
 consent.noaction To Perform no action on the Specimens -click '<b>Reset</b>'
@@ -735,6 +740,7 @@ buttons.reset=Reset
 buttons.approve=Approve
 buttons.reject=Reject
 buttons.submit=Submit
+buttons.addPrivilege=Add Privilege
 buttons.close=Close
 buttons.pending=Pending
 buttons.edit=Edit
@@ -966,6 +972,7 @@ specimen.label=Label
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
+create.CpChildSp = Create Aliquot/Derived Specimen as per CP
 #-- New Specimen Keys End --
 
 #--Department Add/Edit keys Begin--
@@ -1106,7 +1113,7 @@ specimenCollectionGroup.studyCalendarEventPoint=Study Calendar Event Point
 specimenCollectionGroup.clinicalDiagnosis=Clinical Diagnosis
 specimenCollectionGroup.clinicalStatus=Clinical Status
 specimenCollectionGroup.medicalRecordNumber=Medical Record Number
-specimenCollectionGroup.surgicalPathologyNumber=Surgical pathology number
+specimenCollectionGroup.surgicalPathologyNumber=Surgical Pathology Number
 specimenCollectionGroup.collectionStatus=Collection Status
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
 specimen.details.label Specimen Details
@@ -1148,6 +1155,7 @@ storageType.holdsSpecimenClass=Specimen Type
 #-- StorageContainer Add/Edit Keys Begin --
 storageContainer.id=Identifier
 storageContainer.title=Add Storage Container
+storageContainer.header=Storage Container
 storageContainer.editTitle=Edit Storage Container
 storageContainer.type=Type
 storageContainer.name=Container Name
@@ -1405,7 +1413,7 @@ distribution.fromSite=From Site
 distribution.toSite=To Site
 distribution.specimenType=Specimen Type
 distribution.searchTitle=Enter The Identifier
-distribution.distributedItem=Distributed Item(S)
+distribution.distributedItem=Distributed Item(s)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
@@ -1712,7 +1720,7 @@ specimenArrayAliquots.specimenType=Specimen Type
 specimenArrayAliquots.label=Label
 specimenArrayAliquots.barcode=Barcode
 specimenArrayAliquots.location=Location
-
+specimenArrayAliquots.parent=Parent Specimen Array
 
 specimenArrayAliquots.summaryTitle=Specimen Array Aliquot Creation Summary
 
@@ -1965,5 +1973,3 @@ save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not sup
 participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
-# MSR change
-buttons.addPrivilege=Add Privilege
