*** empty log message ***
SVN-Revision: 14633

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -799,7 +799,7 @@ link.Distribute=Distribute
 
 #--Security Messages Keys Begin--
 access.execute.action.denied=<li><font color="red">Access denied: You are not authorized to perform this operation.</font></li>
-access.addedit.object.denied=<li><font color="red">Security Alert! Authorization denied for user: {0} to add/edit object: {1}</font></li>
+access.addedit.object.denied=<li><font color="red">Access denied to add/edit {1}. User does not have {2} privilege on {3}.</font></li>
 access.edit.object.denied=<li><font color="red">Security Alert! Authorization denied for user: {0} to edit object: {1}</font></li>
 access.use.object.denied=<font color="red" >Security Alert! Authorization denied for user to use this container</font>
 #--Security Messages Keys End--
