assignPrivileges.userPriviledgeSummary=User Privileges Summary is replaced with assignPrivileges.privilege Details=Privilege Details
SVN-Revision: 14640

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1466,7 +1466,7 @@ assignPrivileges.recordId=Record Id
 assignPrivileges.attribute=Attribute
 assignPrivileges.group=Group/User
 assignPrivileges.bloodCancerProtocol=Assign Privileges 'Blood Cancer Protocol'
-assignPrivileges.userPriviledgeSummary=User Privileges Summary
+assignPrivileges.privilegeDetails=Privilege Details
 assignPrivileges.site(s)=Site(s)
 assignPrivileges.action(s)=Action(s)
 PHI_ACCESS=PHI Access
