--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1468,7 +1468,8 @@ assignPrivileges.group=Group/User
 assignPrivileges.bloodCancerProtocol=Assign Privileges 'Blood Cancer Protocol'
 assignPrivileges.privilegeDetails=Privilege Details
 assignPrivileges.site(s)=Site(s)
-assignPrivileges.action(s)=Action(s)
+assignPrivileges.collectionProtocol(s)=Collection Protocol(s)
+assignPrivileges.allCurrentAndFuture=All Current and Future
 PHI_ACCESS=PHI Access
 
 
