*** empty log message ***
SVN-Revision: 14660

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -23,7 +23,7 @@ reviewSPR.noPendingRequest.msg=There are no Pending Review Request
 quarantineSPR.noPendingRequest.msg=There are no Pending Quarantine Request
 
 #SearchView
-mylist.label.selectLabel=Select operations to be performed on the selected specimens
+mylist.label.selectLabel=Select operation to be performed on the selected specimens and click '<b>Submit</b>'
 mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
 mylist.label.orderBioSpecimen=Order BioSpecimens
