*** empty log message ***
SVN-Revision: 14680

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -27,7 +27,9 @@ mylist.label.selectLabel=Select operation to be performed on the selected specim
 mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
 mylist.label.orderBioSpecimen=Order BioSpecimens
-
+#Shipment Messages
+shipment.request=Request for Shipment
+shipment.create=Create New Shipment
 #Ordering System
 orderingsystem.label.requestOrder=Order Biospecimen
 orderingsystem.label.orderRequestName=Order Name
