Distribution :yale's usecase
SVN-Revision: 14695

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -76,12 +76,12 @@ orderingsystem.label.existingArray=Existing Array
 orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
 
-errors.ordering.note=<font size\="3.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
-errors.ordering.note1=<font size\="3.0"> they will not be available for placing an order:</font> 
-errors.ordering.a=<font size\="3.0"> a.  Is stored in the virtual location</font> 
-errors.ordering.b=<font size\="3.0"> b. Is of zero quantity</font> 
-errors.ordering.c=<font size\="3.0"> c. Is not available</font> 
-errors.ordering.d=<font size\="3.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
+errors.ordering.note=<font size\="2.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
+errors.ordering.note1=<font size\="2.0"> they will not be available for placing an order:</font> 
+errors.ordering.a=<font size\="2.0"> a.  Is stored in the virtual location</font> 
+errors.ordering.b=<font size\="2.0"> b. Is of zero quantity</font> 
+errors.ordering.c=<font size\="2.0"> c. Is not available</font> 
+errors.ordering.d=<font size\="2.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
 
 
 orderingSystem.label.create Create
@@ -135,7 +135,7 @@ requestdetails.header.button.label.Update=Update
 requestdetails.header.label.Comments=Comment
 requestdetails.tabname.label.specimenRequests=Specimen Requests
 requestdetails.tabname.label.arrayRequests=Array Requests
-requestdetails.datatable.label.RequestItem=Specimen Label
+requestdetails.datatable.label.RequestItem=Specimen
 requestdetails.datatable.label.RequestFor=Request For
 requestdetails.datatable.label.RequestedQty=Quantity
 requestdetails.datatable.label.AvailableQty=Available Quantity
@@ -1419,6 +1419,9 @@ distribution.distributedItem=Distributed Item(s)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
+errors.distribution.quantity.should.equal <li><font color="red"> Quantity of ordered specimen should be equal to it's available quantity.</font></li>
+errors.distribution.derivedspecimen.type.class <li><font color="red"> Ordered specimen class and type shold be same as requested class and type.</font></li>
+errors.distribution.aliquots.created <li><font color="blue"> Aliquot(s) created for specimen {0}</font></li>
 distribution.distributionType=Distributed Item
 distribution.distributionBasedOn Distribution Based On
 distribution.distributionBasedOn.barcode Barcode
