Distribution :yale's usecase
SVN-Revision: 14702

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1420,7 +1420,7 @@ itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
 errors.distribution.quantity.should.equal <li><font color="red"> Quantity of ordered specimen should be equal to it's available quantity.</font></li>
-errors.distribution.derivedspecimen.type.class <li><font color="red"> Ordered specimen class and type shold be same as requested class and type.</font></li>
+errors.distribution.derivedspecimen.type.class <li><font color="red"> Ordered specimen class and type should be same as requested class and type.</font></li>
 errors.distribution.aliquots.created <li><font color="blue"> Aliquot(s) created for specimen {0}</font></li>
 distribution.distributionType=Distributed Item
 distribution.distributionBasedOn Distribution Based On
