Distribution :yale's usecase
SVN-Revision: 14708

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -195,7 +195,7 @@ consent.withdrawconsents Withdraw Consents
 consent.withdrawspecimens What do you want to do with the withdrawn specimens?
 consent.applystatusquestion What do you want to do with the consent status of specimen/s?
 consent.defineconsents Define Consents
-consent.consentforspecimen Consent for Specimen
+consent.consentforspecimen Consent
 consent.specimenCollectionGroupResponseStatus Specimen Collection Group Response
 consent.specimenResponseStatus Specimen Response
 consent.responsestatus= Verify Consent Status
