--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -78,7 +78,7 @@ orderingsystem.label.arrayName=Array Name
 
 errors.ordering.note=<font size\="2.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
 errors.ordering.note1=<font size\="2.0"> they will not be available for placing an order:</font> 
-errors.ordering.a=<font size\="2.0"> a.  Is stored in the virtual location</font> 
+errors.ordering.a=<font size\="2.0"> a.  Is virtually located</font> 
 errors.ordering.b=<font size\="2.0"> b. Is of zero quantity</font> 
 errors.ordering.c=<font size\="2.0"> c. Is not available</font> 
 errors.ordering.d=<font size\="2.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
