--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -47,14 +47,15 @@ orderingsystem.label.requestFor=Request For
 orderingsystem.label.classList=Specimen Class
 orderingsystem.label.typeList=Specimen Type
 orderingsystem.label.noSpecimenSelected=No specimen selected
-orderingsystem.label.existingSpecimen=Existing Specimen
-orderingsystem.label.derivedSpecimen=Derivative Specimen
+orderingsystem.label.existingSpecimen=Existing
+orderingsystem.label.derivedSpecimen=Derivative
 orderingsystem.button.addToOrderList=Add To Order List
 orderingsystem.arrayRequests.datatable.label.AddDescription Add Description
 orderingsystem.button.cancel=Cancel
 orderingSystem.tableheader.label.arrayStatus Array Status
 orderingSystem.arrayRequestsPage.buttons.createArray Create Array
 orderingsystem.button.defineArray=Define Array
+orderingsystem.SpecimenLabel=Specimen Label
 
 orderingsystem.label.caseList=Case List
 orderingsystem.label.derivative=Specimens
@@ -76,12 +77,13 @@ orderingsystem.label.existingArray=Existing Array
 orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
 
-errors.ordering.note=<font size\="2.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
-errors.ordering.note1=<font size\="2.0"> they will not be available for placing an order:</font> 
-errors.ordering.a=<font size\="2.0"> a.  Is virtually located</font> 
-errors.ordering.b=<font size\="2.0"> b. Is of zero quantity</font> 
-errors.ordering.c=<font size\="2.0"> c. Is not available</font> 
-errors.ordering.d=<font size\="2.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
+errors.ordering.note.heading Note:
+errors.ordering.note= If the My List contained specimens with any one of the following properties, 
+errors.ordering.note1= they will not be available for placing an order:
+errors.ordering.a= a.  Is virtually located
+errors.ordering.b= b. Is of zero quantity
+errors.ordering.c= c. Is not available 
+errors.ordering.d= d. Is anticipated (i.e. with collection status pending, over due, not collected) 
 
 
 orderingSystem.label.create Create
@@ -134,7 +136,7 @@ requestdetails.header.label.CreationDate=Date of Creation
 requestdetails.header.button.label.Update=Update
 requestdetails.header.label.Comments=Comment
 requestdetails.tabname.label.specimenRequests=Specimen Requests
-requestdetails.tabname.label.arrayRequests=Array Requests
+requestdetails.tabname.label.arrayRequests=Array Request
 requestdetails.datatable.label.RequestItem=Specimen
 requestdetails.datatable.label.RequestFor=Request For
 requestdetails.datatable.label.RequestedQty=Quantity
@@ -152,7 +154,12 @@ requestdetails.link.ViewAllConsents=View All Consents
 requestdetails.header.RequestedSpecimenDetails=Requested Specimen Details
 requestdetails.Requested=Requested
 requesteddetails.class.Type=Class, Type
+requesteddetails.request.specimen=Request for Specimen
+requesteddetails.arrayName=Array Name :
 
+orderingSystem.orderListTitle Order List Title
+orderingSystem.createOrder Create Order
+orderingSystem.header Biospecimen Order
 orderingSystem.tab.biospecimen Biospecimen
 orderingSystem.tab.pathologicalCase Pathological Case
 orderingSystem.tab.biospecimenArray Biospecimen Array
