*** empty log message ***
SVN-Revision: 14782

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -978,6 +978,10 @@ scecimen.dateformat=[MM-DD-YYYY]
 
 specimen.concentrationUnit=&micro;g/&micro;l
 specimen.label=Label
+specimenLabel=Specimen Label
+specimenfromLocation=From Location
+specimenDestContainer=Destination Container Name
+specimenLabels=Specimen Labels
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
