--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1501,27 +1501,28 @@ column.names Column Names
 distribution.reportTitle Distribution Report
 
 #-- Query Search Result Keys --
-pageOfUserAdmin.searchResultTitle=User Search Result
-pageOfInstitution.searchResultTitle=Institution Search Result
-pageOfDepartment.searchResultTitle=Department Search Result
-pageOfCancerResearchGroup.searchResultTitle=Cancer Research Group Search Result
-pageOfSite.searchResultTitle=Site Search Result
-pageOfStorageType.searchResultTitle=Storage Type Search Result
-pageOfStorageContainer.searchResultTitle=Storage Container Search Result
-pageOfBioHazard.searchResultTitle=Biohazard Search Result
-pageOfCollectionProtocol.searchResultTitle=Collection Protocol Search Result
-pageOfDistributionProtocol.searchResultTitle=Distribution Protocol Search Result
-pageOfParticipant.searchResultTitle=Participant Search Result
-pageOfCollectionProtocolRegistration.searchResultTitle=Collection Protocol Registration Search Result
-pageOfSpecimenCollectionGroup.searchResultTitle=Specimen Collection Group Search Result
-pageOfNewSpecimen.searchResultTitle=Specimen Search Result
-pageOfDistribution.searchResultTitle=Distribution Search Result
-pageOfArrayDistribution.searchResultTitle=Distribution Search Result
+search.searchResults= Search Result
+pageOfUserAdmin.searchResultTitle=User
+pageOfInstitution.searchResultTitle=Institution
+pageOfDepartment.searchResultTitle=Department
+pageOfCancerResearchGroup.searchResultTitle=Cancer
+pageOfSite.searchResultTitle=Site
+pageOfStorageType.searchResultTitle=Storage Type
+pageOfStorageContainer.searchResultTitle=Storage Container
+pageOfBioHazard.searchResultTitle=Biohazard
+pageOfCollectionProtocol.searchResultTitle=Collection Protocol
+pageOfDistributionProtocol.searchResultTitle=Distribution Protocol
+pageOfParticipant.searchResultTitle=Participant
+pageOfCollectionProtocolRegistration.searchResultTitle=Collection Protocol Registration
+pageOfSpecimenCollectionGroup.searchResultTitle=Specimen Collection Group
+pageOfNewSpecimen.searchResultTitle=Specimen
+pageOfDistribution.searchResultTitle=Distribution
+pageOfArrayDistribution.searchResultTitle=Distribution
 pageOfSimpleQueryInterface.searchResultTitle=Search Results
 pageOfQueryResults.searchResultTitle=Search Results
 pageOfQueryModule.searchResultTitle=Search Results
-pageOfSpecimenArrayType.searchResultTitle Specimen Array Type Search Results
-pageOfSpecimenArray.searchResultTitle Specimen Array Search Results
+pageOfSpecimenArrayType.searchResultTitle Specimen Array Type
+pageOfSpecimenArray.searchResultTitle Specimen Array
 advanceQuery.noRecordsFound <li><font color\="red">No Records Found.</font></li>
 advanceQuery.noConditions <li><font size\="2.8" color\="red">Please select conditions for the search.</font></li>
 advanceQuery.userAlreadyLoggedIn=<li><font color="red">You are logged in to caTissue Core with the same user account from two different browsers or machines. caTissue Core does not support using Advanced search from two such sessions. Please log off from one of the session and retry the Query.</font></li>
