Status added for the order details page
SVN-Revision: 14840

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -56,6 +56,7 @@ orderingSystem.tableheader.label.arrayStatus Array Status
 orderingSystem.arrayRequestsPage.buttons.createArray Create Array
 orderingsystem.button.defineArray=Define Array
 orderingsystem.SpecimenLabel=Specimen Label
+orderingSystem.details.distributionStatus=--Select Status For All--
 
 orderingsystem.label.caseList=Case List
 orderingsystem.label.derivative=Specimens
