Correcting spelling mistakes
SVN-Revision: 14849

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -548,7 +548,7 @@ errors.editNewPendingUser=This user is not approved yet. Approve this user from 
 errors.forgotpassword.user.notApproved=<li><font color="red">Your membership is not approved yet.</font></li>
 errors.forgotpassword.user.unknown=<li><font color="red">User does not exist</font></li>
 errors.incorrectLoginNamePassword=<li><font color="red">Incorrect Email Address or Password.</font></li>
-errors.exceptionErrorMessage=<li><font color="red">Unknown error occured. Please try again or later.</font></li>
+errors.exceptionErrorMessage=<li><font color="red">Unknown error occurred. Please try again or later.</font></li>
 errors.userNotLoggedIn=<li><font color="red">Please Login to access the Page.</font></li>
 errors.item.selected=<li><font color="red">Please select the valid {0} from the list</font></li>
 errors.enrollment=<li><font color="red">Invalid number of Participants Anticipated. </font></li>
@@ -1604,7 +1604,7 @@ errors.newPassword.sameAsUserName=Password should not be same as User/Login name
 errors.newPassword.sameAsOld=New Password should be different than Old Password.
 errors.newPassword.pattern=New password must include at least one upper case letter, one lower case letter and a number. The password can not contain spaces.
 errors.newPassword.sameSession=Password can not be changed more than once in a session.
-errors.newPassword.genericmessage=Error occured in Password change Operation.Please report this problem to the Adminstrator.
+errors.newPassword.genericmessage=Error occurred in Password change Operation.Please report this problem to the Administrator.
 errors.newPassword.sameAsLastn=New Password should be different than last {0} Passwords.
 errors.changePassword.changeFirstLogin=You have to change your password as you are logging in for the first time.
 errors.changePassword.expire=Your Password has been expired, Please change the password.
@@ -1614,7 +1614,7 @@ errors.changePassword.sameAsNameSurnameEmail=New Password should not contain nam
 #-- Errors for Password Valiadation end--
 errors.phoneNumber.format=<li><font color="red">Please enter valid {0}.</font></li>
 errors.zipCode.format=<li><font color="red">Please enter valid {0}. The valid format are xxxxx-xxxx or xxxxx</font></li>
-Err.SMException.01=The Security Service encountered a fatal error occured while {0} {1}. Please report this problem to the adminstrator.
+Err.SMException.01=The Security Service encountered a fatal error occurred while {0} {1}. Please report this problem to the adminstrator.
 Err.ConstraintViolation Submission failed since a {0} with the same {1} already exists.
 #-- Advance Query Keys --
 advanceQuery.title=Advance Search
@@ -1635,7 +1635,7 @@ state.errMsg=State is invalid.
 country.errMsg=Country is invalid.
 
 user.role.errMsg=Role is invalid.
-user.role.dbErrMsg=Exception occured while fetching the roles from the database.
+user.role.dbErrMsg=Exception occurred while fetching the roles from the database.
 
 storageContainer.isContainerFull.errMsg=New Container can not be full while adding.
 
