MSR - to show user friendly messages
SVN-Revision: 14890

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1992,3 +1992,8 @@ save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not sup
 participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
+
+user.cannotCreateSuperAdmin = You cannot create Super Admin users or promote users to Super Admin Role since you are not a Super Admin
+user.siteIsRequired = Associate User to Atleast 1 Site. You cannot create a Global user since you are not a Super Admin
+user.cannotEditOwnPrivileges = You cannot Change your own Privileges
+user.cannotCreateScientist = You cannot create a Scientist user since you are not a Super Admin 
