MSR - to show user friendly messages
SVN-Revision: 14906

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1993,7 +1993,7 @@ participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
 
-user.cannotCreateSuperAdmin = You cannot create Super Admin users or promote users to Super Admin Role since you are not a Super Admin
-user.siteIsRequired = Associate User to Atleast 1 Site. You cannot create a Global user since you are not a Super Admin
-user.cannotEditOwnPrivileges = You cannot Change your own Privileges
-user.cannotCreateScientist = You cannot create a Scientist user since you are not a Super Admin 
+user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
+user.siteIsRequired = Access denied ! Please add user to atleast one Site.
+user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
+user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
