*** empty log message ***
SVN-Revision: 14909

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1996,4 +1996,5 @@ participant.registered.msg.consents = Cannot delete consents, Participant Regist
 user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to create Super Admin user.
 user.siteIsRequired = Access denied ! Please add user to atleast one Site.
 user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
-user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user. 
+user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user.
+cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator 
