Adding proper msg for query validation : Sayali
SVN-Revision: 14925

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -264,7 +264,7 @@ query.includeDescription Include Description
 query.text Text
 query.conceptCode Concept Code
 errors.executeQuery.genericmessage=<li><font color="red">Error occurred while executing query.Please report this problem to the Administrator.</font></li>
-errors.executeQuery.multipleRoots=<li><font color="red">Expression graph should be a connected graph.</font></li>
+errors.executeQuery.multipleRoots=<li><font color="red">Please make sure that all nodes are connected and that there is only one root node present in DAG.</font></li>
 simpleQuery.twovalues.required=<li><font color="red">Please enter two valid values for operator 'Between'.</font></li>
 query.date.format MM-DD-YYYY
 query.addToView Add To View
