*** empty log message ***
SVN-Revision: 14933

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1997,4 +1997,5 @@ user.cannotCreateSuperAdmin = Access denied ! User does not have privilege to cr
 user.siteIsRequired = Access denied ! Please add user to atleast one Site.
 user.cannotEditOwnPrivileges = Access denied ! User cannot change own privileges.
 user.cannotCreateScientist = Access denied ! User does not have privilege to create a scientist user.
-cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator 
+cp.cannotChangePrivilegesOfPIOrCoord = Access denied ! User cannot change privileges of PI or Coordinator.
+cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
